--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "parcel ./index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html",
+    "serve": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "nodemon": "^2.0.20",
     "parcel": "^2.8.3",
     "process": "^0.11.10"
   }
